# diagnost

./: .gitignore  LICENSE  README.md  pyproject.toml
diagnost/: __init__.py  calibration.py  compare.py  dataset.py  drift.py  evaluate.py  report.py
tests/: test_compare.py  test_dataset.py  test_evaluate.py
