[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diagnost"
version = "0.1.0"
description = "A model diagnostics library for data scientists — performance, calibration, drift, and reporting in a few lines of Python."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "scikit-learn>=1.0",
]

[project.urls]
Homepage = "https://github.com/Eklavya20/diagnost"
Issues = "https://github.com/Eklavya20/diagnost/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]